--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cookie Clicker</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img id="cookie" src="cookie.png" alt="Cookie" style="cursor: pointer;">
+    <div id="cookieCount">Cookies: 0</div>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <script src="script.js"></script>
 </body>
 </html>
