--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <img id="cookie" src="cookie.png" alt="Cookie" style="cursor: pointer;">
     <div id="cookieCount">Cookies: 0</div>
 
+    <div id="upgrades">
+        <h2>Upgrades</h2>
+        <button id="buyCursor">Buy Cursor - 10 Cookies</button>
+        <button id="buyGrandma">Buy Grandma - 100 Cookies</button>
+        <button id="buyFarm">Buy Farm - 500 Cookies</button>
+        <button id="buyFactory">Buy Factory - 2000 Cookies</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
