--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <button id="buyGrandma">Buy Grandma - 100 Cookies</button>
         <button id="buyFarm">Buy Farm - 500 Cookies</button>
         <button id="buyFactory">Buy Factory - 2000 Cookies</button>
+        <button id="buyMine">Buy Mine - 1000 Cookies</button>
+        <button id="buyRocket">Buy Rocket - 5000 Cookies</button>
+        <button id="buyPortal">Buy Portal - 25000 Cookies</button>
+        <button id="buyTimeMachine">Buy Time Machine - 100000 Cookies</button>
     </div>
 
     <script src="script.js"></script>
