--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img id="cookie" src="cookie.png" alt="Cookie" style="cursor: pointer;">
-    <div id="cookieCount">Cookies: 0</div>
+    <img id="chicken" src="cookie.png" alt="chicken" style="cursor: pointer;">
+    <div id="Chicken">Chicken: 0</div>
 
     <div id="upgrades">
         <h2>Upgrades</h2>
